# made-in-canada

./: .gitignore  README.md  app.py  backend.py  migrate_madeinca_json_to_postgres.py  pyproject.toml  run_scrapes.py  scrape_madeinca.py  scrape_products.py  team.py
.streamlit/: config.toml
